test/Fail/Issue4065.err
Issue4065.agda:13,3-39: error: [UnsolvedConstraints]
Unsolved constraints
when checking the module application module T F = R (r (λ ℓ → F ℓ))
